# ta-lib-rust

./: .travis.yml  Cargo.toml  LICENSE  README.md  build.rs  wrapper.h
examples/: atr.rs  rsi.rs  sma.rs
src/: lib.rs
